# agent-llm-wiki

./: .gitignore  README.md  nga_backfill_thread.py  pyproject.toml  remote_main.py
docs/: AGENT_QUICKSTART.md  PLUGIN_INSTALL.md
examples/: andrej-karpathy.md  langda-sample.md  trader-sample.md  yamada-anna.md
examples/increments/: 2026-04-16-new-note.md
examples/raw/: karpathy-batch.md  karpathy-wild.md  langda-old-thread.md  trader-sample-notes.md  yamada-batch.md  yamada-wild.md
plugins/llm-wiki/: .mcp.json
plugins/llm-wiki/.codex-plugin/: plugin.json
scripts/: extract_nga_person.py  langda_ingest.py
src/llm_wiki/: __init__.py  builder.py  cli.py  importer.py  ingest.py  mcp_server.py  parser.py  paths.py  topic_autotag.py  wiki_backend.py
tests/: test_end_to_end.py
