[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "Build a person-centric markdown wiki from source statements and incremental updates."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "mango"}
]
keywords = ["llm", "wiki", "knowledge-base", "markdown", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Text Processing :: Markup :: Markdown"
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.27.0,<2"]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"
llm-wiki-mcp = "llm_wiki.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
